# portfolio-management-platform

./:  CHANGELOG.md  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  alembic.ini  docker-compose.yml  notebook.ipynb  notebook2.ipynb  notebook_account.ipynb  notebook_monitoring.ipynb  package-lock.json  prefect.yaml  pyproject.toml  requirements.txt  ruff.toml  test.py  todo.md  tree.md  tree.py
vault/: README.md  prefect.yaml  pyproject.toml
vault/backend/api/: main.py  serialization.py
vault/backend/api/routers/: assets.py  credentials.py  portfolio.py  rebalance.py  tags.py
vault/backend/application/credentials/: factory.py  ports.py
vault/backend/application/portfolio/: factory.py  ports.py  service.py
vault/backend/tests/: conftest.py  test_imports.py
vault/frontend/: package-lock.json  package.json  vite.config.ts
vault/frontend/src/: App.tsx
vault/migrations/postgres/: analytics.ini  env.py  monitoring.ini
vault/migrations/sqlite/: env.py
vault/pipeline/domain/: __init__.py  models.py
vault/pipeline/etl/: policies.py  protocols.py
vault/pipeline/orchestration/: asset_flow_event_producer.py  asset_flow_portfolio.py  enrichment_synchronization.py  flow_fred.py  flow_rebalance_plan.py  flow_t212_bronze.py  flow_t212_gold.py  flow_t212_history_bronze.py  flow_t212_silver.py
vault/pipeline/tests/: conftest.py
vault/shared/database/: client.py
vault/shared/notifications/: email.py
vault/shared/repositories/: base_table_repository.py  interface.py
vault/shared/utils/: custom_logger.py
(+1452 files in other folders)
